@@ -1,4 +1,4 @@
-<!-- $Id: DisplayFiles.html,v 1.4 2006-12-06 05:15:50 castaglia Exp $ -->
+<!-- $Id: DisplayFiles.html,v 1.5 2008-08-23 02:57:46 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/howto/DisplayFiles.html,v $ -->
 
 <html>
@@ -221,11 +221,21 @@ as well; please consult their documentation for more information.
     <td>%{total_files_xfer}</td>
     <td>The number of files transferred (uploaded and downloaded) in this session</td>
   </tr>
+
+  <tr>
+    <td>%{env:<i>name</i>}</td>
+    <td>The value of the environment variable <i>name</i></td>
+  </tr>
+
+  <tr>
+    <td>%{time:<i>format</i>}</td>
+    <td>Uses <i>format</i> (as per the <code>strftime(3)</code> function) to format a timestamp</td>
+  </tr>
 </table>
 
 <p>
 <hr>
-<i>$Date: 2006-12-06 05:15:50 $</i><br>
+<i>$Date: 2008-08-23 02:57:46 $</i><br>
 
 </body>
 </html>
