@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.927 2008-08-21 07:03:34 castaglia Exp $
+$Id: NEWS,v 1.928 2008-08-23 02:57:45 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -39,6 +39,8 @@ CVS
 - Bug 3101 - mod_wrap2 does not compile on FreeBSD with custom includes.
 - Bug 3098 - Socket descriptor leak when using syslog logging, especially at
   SyslogLevel 'notice' or higher.
+- Bug 3055 - Support Display variable for specifying the timestamp format.
+  See doc/howto/DisplayFiles.html for more information.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
